Fix column height and overflow issues

--- a/pretix_wallet/static/pretix_wallet/css/wallet.css
+++ b/pretix_wallet/static/pretix_wallet/css/wallet.css
@@ -12,6 +12,15 @@
     color: #006735 !important;
 }
 
+.same-height {
+    height: inherit !important;
+}
+
+.is-fullheight {
+    height: 100% !important;
+
+}
+
 * :not(i) {
     font-family: "Montserrat" !important;
 }
